<resources>
    <string name="app_name">Kiai</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_profil">Profil</string>
    <string name="menu_orar">Orar</string>
    <string name="menu_evenimente">Evenimente</string>
    <string name="menu_istoric_prezenta">Istoric prezenta</string>
    <string name="menu_confidentialitate">Confidentialitate</string>

    <string name="title_activity_login">LoginActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <array name="countries">
        <item>Romania</item>
        <item>Norway</item>
        <item>Germany</item>
        <item>Italy</item>
        <item>Spain</item>
    </array>
</resources>